module/core/former/tests/inc/struct_tests/compiletime/struct_attr_bad.stderr
error: cannot find attribute `defaultx` in this scope
 --> tests/inc/struct_tests/compiletime/struct_attr_bad.rs:5:4
  |
5 | #[ defaultx ]
  |    ^^^^^^^^
